# oh-llama.cpp

./: .gitignore  CMakeLists.txt  README.md  hdc.sh  hm_aarch64.cmake
common/: common.cpp
examples/: CMakeLists.txt
examples/rknn-matmul/: CMakeLists.txt  rknn-matmul-int.cpp  rknn-matmul.cpp
ggml/: CMakeLists.txt
ggml/include/: ggml-backend.h  ggml-cpu.h  ggml-rknn.h  model_related_config.h.in
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp  ggml-backend.cpp  ggml.c
ggml/src/ggml-cpu/: ggml-cpu.c
ggml/src/ggml-rknn/: CMakeLists.txt  ggml-rknn.cpp
prompts/: prompt-128.txt
scripts/: batch-run-oh-prefill.sh  batch-run-oh.sh  batch-run.sh  mat_kernel_size.json  rknn-config.json
src/: llama-context.cpp  llama-model.cpp  llama.cpp
